--- a/Task/crud/src/app/userlist/userlist.component.html
+++ b/Task/crud/src/app/userlist/userlist.component.html
@@ -32,7 +32,7 @@
                                 <th>Action</th>
                             </tr>
                         </thead>
-                        <tr *ngFor="let item of userLists">
+                        <tr *ngFor="let item of getPaginatedData()">
                             <td>{{ item.name}}</td>
                             <td>{{ item.email }}</td>
                             <td>{{ item.gender }}</td>
@@ -54,6 +54,21 @@
                             </td>
                         </tr>
                     </table>
+                    <div class="pagination">
+                        <ul class="pagination">
+                          <li class="page-item" [class.disabled]="currentPage === 1">
+                            <a class="page-link" (click)="onPageChange(currentPage - 1)" >Previous</a>
+                          </li>
+                          <li class="page-item" *ngFor="let page of getPageNumbers()">
+                            <a class="page-link" [class.active]="currentPage === page" (click)="onPageChange(page)" >
+                              {{ page }}
+                            </a>
+                          </li>
+                          <li class="page-item" [class.disabled]="currentPage === getTotalPages()">
+                            <a class="page-link" (click)="onPageChange(currentPage + 1)" >Next</a>
+                          </li>
+                        </ul>
+                      </div>
                 </div>
             </div>
 
